[workspace]
members = [
    "pollux",
    "pollux-core",
    "example"
]

resolver = "3"

[workspace.package]
license = "Apache 2.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/kvyun/pollux"
homepage = "https://github.com/kvyun/pollux"
rust-version = "1.85.0"
categories = [ "network-programming" ]

[workspace.dependencies]
tracing = "0.1"