[package]
name = "pollux-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
description = "TBD"

[dependencies]
async-trait = "0.1.87"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
uuid = { version = "1.15.1", features = ["v4", "serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
