[package]
name = "pollux"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
description = "TBD"

[dependencies]
pollux-core = { version = "0.1.0", path = "../pollux-core" }
